--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,6 +76,7 @@ mflux-generate-in-context-catvton = "mflux.generate_in_context_catvton:main"
 mflux-generate-fill = "mflux.generate_fill:main"
 mflux-generate-depth = "mflux.generate_depth:main"
 mflux-generate-redux = "mflux.generate_redux:main"
+mflux-generate-redux-advanced = "mflux.generate_redux_advanced:main"
 mflux-generate-kontext = "mflux.generate_kontext:main"
 mflux-concept = "mflux.concept:main"
 mflux-concept-from-image = "mflux.concept_from_image:main"
